--- a/assets/css/recipe-blue.css
+++ b/assets/css/recipe-blue.css
@@ -116,7 +116,7 @@ hr {
 /* ******************* Recipe ******************* */
 /* Image */
 
-#picture{
+.picture{
 	background: transparent url(../img/picture.jpg) top center no-repeat;
 }
 
