--- a/assets/css/recipe.css
+++ b/assets/css/recipe.css
@@ -9,30 +9,58 @@ header {
   width: 100%;
   height: 195px;
   text-align: center;
+  z-index: +1;
+ /* position: fixed; */
+
 }
 
 .logo {
+  /* margin-top: -180px; */
   position: relative;
-  z-index: +1;
+  z-index: +2;
   background: transparent url(../img/pink/logo.png) top center no-repeat;
   width: 215px;
   height: 197px;
-  margin-top: 30px;
+  margin-top: 10px;
   margin-left: auto;
   margin-right: auto;
 }
 
 .row{
-	margin-right: 0 !important;
-	margin-left:0 !important;
+  margin-right: 0 !important;
+  margin-left:0 !important;
 }
+
+.dish {
+  margin: 15px auto 10px auto;
+}
+
+.borders{
+    border: 1px solid transparent;
+    padding: 40px 0;
+    -webkit-border-image: url(../img/pink/hr.png) 50 round; /* Safari 3.1-5 */
+    -o-border-image: url(../img/pink/hr.png) 50 round; /* Opera 11-12.1 */
+    border-image: url(../img/pink/hr.png) 50 round;
+  }
 
 .container {
   background-color: white;
   width: auto;
-  margin: -35px auto;
+  margin: -45px auto;
+  z-index: +3;
+  padding-left: 2%;
+  padding-right: 2%;
+  padding-bottom: 10px;
   position: relative;
   z-index: 0;
+}
+
+h3{
+  font-size: 1.4em !important;
+}
+
+.recipe-items{
+  padding-top: 1%;
 }
 
 nav {
@@ -40,8 +68,7 @@ nav {
 }
 
 .navigation{
-	position: relative;
-	top: 15px;
+ margin-top: 15px;
 }
 
 .navigation li {
@@ -57,7 +84,7 @@ nav {
 }
 
 .navigation li a:hover{
-	color: #f16276;
+  color: #f16276;
 }
 
 hr {
@@ -78,45 +105,45 @@ hr {
   display:none;
 }
 
-/* Style for switch css files */
+/* *********************** Switch for css files ************************** */
 
 .styleSwitch{
-	display: block;
-	float: right;
-	background-color: #fff;
+  display: block;
+  float: right;
+  background-color: #fff;
 }
 
 .styleSwitch a:link,
 .styleSwitch a:visited{
-	display: block;
-	width: 70px;
-	padding: 5px;
-	text-align: center;
-	text-decoration: none;
-	color: #fff;
+  display: block;
+  width: 70px;
+  padding: 5px;
+  text-align: center;
+  text-decoration: none;
+  color: #fff;
 }
 
 .styleSwitch a:hover{
-	text-decoration: underline;
+  text-decoration: underline;
 }
 
 #css-pink{
-	background-color: #F06377;
+  background-color: #F06377;
 }
 
 #css-blue{
-	background-color: #74BAE7;
+  background-color: #74BAE7;
 }
 
 #css-green{
-	background-color: #A6D38B;
+  background-color: #A6D38B;
 }
 
 /* ******************* Recipe ******************* */
 /* Image */
 
-#picture{
-	background: transparent url(../img/picture.jpg) top center no-repeat;
+ .picture{
+   background: transparent url(../img/picture.jpg) top center no-repeat;
 }
 
 .img-box {
@@ -126,14 +153,8 @@ hr {
   opacity: 0.2;
 }
 
-.dish {
-  margin: 15px auto 10px auto;
-}
-
-/* Title, category and ingredients*/
 .title-cook-book {
   color: #C12227;
-  padding-top: 5px;
 }
 
 .category {
@@ -153,10 +174,16 @@ hr {
 .list {
   font-size: 90%;
   font-family: Georgia, Times, "Times New Roman", serif;
+  -webkit-padding-start: 0;
+  list-style-position: inside;
 }
 
 .font-bold {
   font-weight: 600;
+}
+
+.recipe{
+  padding-top: 3%;
 }
 
 /* Icons */
@@ -188,17 +215,20 @@ hr {
   display: inline-block;
   content: url("../img/pink/recipe-icon.jpg");
   margin: 0 6px 0 0;
+
 }
 
 /* Recipe */
 .recipe-description {
   font-size: 95%;
   line-height:130%;
-}
+  padding-bottom: 3%
 
+}
 /* ******************* Buttons ******************* */
 .buttons {
-	text-align: center;
+  justify-content: center;
+  text-align: center;
 }
 
 .button-recipe {
@@ -209,8 +239,8 @@ hr {
   font-size:16px;
   font-weight: 400;
   line-height: 45px;
-  margin: 2em 1em 2em;
-  width: 160px;
+  margin:0 1em;
+  max-width: 160px;
   text-decoration: none;
   vertical-align: middle;
   text-shadow: 2px 2px 2px #464242;
@@ -222,4 +252,35 @@ hr {
   color: #464242;
   text-shadow: 2px 2px 2px #fff;
   /* background: rgba($red, 0); */
+}
+.info{
+  display: block;
+  width: 100%;
+  text-align: center;
+  margin-top: 70px;
+}
+
+/* ******************* Style CSS for 'e-Cook Book' *************************** */
+
+.recipes-popup, .ingredients-popup, .needed-popup {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    padding-top: 100px; /* Location of the box */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: hidden; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+.recipes-popup-content, .ingredients-popup-content, .needed-popup-content {
+  background-color: #fefefe;
+   margin: auto;
+   padding: 20px;
+   border: 1px solid #888;
+   width: 60%;
+   overflow: hidden;
 }
